# Crypcodile

./: .gitignore  .payments_db.json  CHALLENGE_REPORT.md  CHANGELOG.md  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  install.ps1  install.sh  progress.md  pyproject.toml  test_failures.txt  test_out.txt  test_run_details.txt  verify_cli_robustness.py
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_cli_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_cli_remediation_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_e2e_tests_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  challenge_report.md  forensic_audit_report.md  handoff.md  progress.md
.agents/auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  git_diff_src.txt  handoff.md  progress.md
.agents/auditor_m1_gen3/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/auditor_m1_gen4/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
.agents/auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m3_gen2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_verification_gen3/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
.agents/challenger_cli_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/challenger_cli_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_cli_remediation_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_cli_remediation_2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_e2e_t1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_e2e_t2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
benchmarks/: RESULTS.md  bench.py
docs/: base_quickstart.md
examples/: analytics_funding.py  analytics_iv_surface.py  base_dashboard.py  collect_base_onchain.py  collect_deribit.py  farcaster_frame.py  monitor_base_volume.py  query_ohlcv.py  replay_to_csv.py
tests/: conftest.py  test_bookmap.py  test_census.py  test_cli.py  test_cli_adversarial.py  test_cli_backfill.py  test_cli_collect.py  test_cli_repairs.py  test_examples.py  test_flowmap.py  test_indicators.py  test_mcp_analytics.py  test_mcp_discovery.py  test_smoke.py
tmp/: test_collect_is_interactive_nacurrent
(+957 files in other folders)
